[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scenes/CarBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Field.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Puck.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/UI/HUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scripts/BaseGame.gd" type="Script" id=5]
[ext_resource path="res://Scripts/Resources/Cars/2002Tii.tres" type="Resource" id=7]
[ext_resource path="res://Scripts/Resources/Cars/GTI.tres" type="Resource" id=8]
[ext_resource path="res://Scripts/Resources/Cars/250GT.tres" type="Resource" id=9]
[ext_resource path="res://Scripts/Resources/Cars/Stratos.tres" type="Resource" id=10]

[node name="BaseGame" type="Node2D"]
script = ExtResource( 5 )

[node name="Field" parent="." instance=ExtResource( 2 )]
__meta__ = {
"_edit_horizontal_guides_": [ 416.0, -416.0 ],
"_edit_vertical_guides_": [ -160.0, 160.0 ]
}

[node name="BlueTeam" type="Node2D" parent="."]

[node name="CarBase4" parent="BlueTeam" instance=ExtResource( 1 )]
position = Vector2( 0, -488 )
rotation = 1.57079
car_details = ExtResource( 9 )
team_color = "blue"

[node name="CarBase5" parent="BlueTeam" instance=ExtResource( 1 )]
position = Vector2( -128, -488 )
rotation = 1.57079
car_details = ExtResource( 10 )
team_color = "blue"

[node name="RedTeam" type="Node2D" parent="."]

[node name="CarBase" parent="RedTeam" instance=ExtResource( 1 )]
position = Vector2( 0, 488 )
rotation = -1.57079
is_player = true
car_details = ExtResource( 7 )
team_color = "red"

[node name="CarBase3" parent="RedTeam" instance=ExtResource( 1 )]
position = Vector2( 128, 488 )
rotation = -1.57079
car_details = ExtResource( 8 )
team_color = "red"

[node name="Puck" parent="." instance=ExtResource( 3 )]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HUD" parent="CanvasLayer" groups=["hud"] instance=ExtResource( 4 )]
